Refactor code to use modern Java features